# JNIDemoAntiDebug

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/jnidemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
